# rootagent

./: .env.example  .gitignore  README.md  pyproject.toml
code/: agent_supervisor.py  root.py
